add reference to 2nd csproj

--- a/ProjectA/ProjectA.csproj
+++ b/ProjectA/ProjectA.csproj
@@ -3,6 +3,9 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
+    <ItemGroup>
+    <ProjectReference Include="../ProjectB/ProjectB.csproj" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
